added global exception handler in user-service and inventory-service